src/objects/SPE_Report_Configs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used for controlling Scope filters for Spend and Volume weight calculation</description>
    <fields>
        <fullName>Market_Filter_For_Volume__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Market Filter For Volume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Filter_For_Spend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Filter For Spend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Filter_For_Volume__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Filter For Volume</label>
        <type>Checkbox</type>
    </fields>
    <label>SPE Report Configs</label>
</CustomObject>